--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <img src="./img/158603_p_28.png" width="200" height="300" alt="jpg">
         <img src="./img/158603_p_28.png" width="200" height="300" alt="jpg">
     </div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae consequuntur eligendi, doloremque aperiam voluptatem velit amet recusandae quam, inventore totam ipsam quibusdam est placeat dolor, at quos voluptatum sunt voluptatibus facere iure magni incidunt repellat sint alias! Esse, reprehenderit non iure hic cumque cum error nam repellendus aut dolores, nulla placeat, ipsum maiores? Laboriosam omnis quo asperiores deleniti placeat aliquam enim amet repellat voluptate atque reprehenderit libero harum a, ipsa distinctio nam! Rem delectus dignissimos, voluptatibus eaque eos ab aliquam enim illum ea nam, dolor eum exercitationem sapiente perferendis culpa molestiae facilis blanditiis qui quas repudiandae voluptatum odio. Cupiditate, nobis.</p>
+    <div class="box">
+        <img src="./img/158603_p_28.png" width="200" height="300" alt="jpg">
+        <img src="./img/158603_p_28.png" width="200" height="300" alt="jpg">
+        <img src="./img/158603_p_28.png" width="200" height="300" alt="jpg">
+    </div>
 
 
 
